--- a/index.html
+++ b/index.html
@@ -6,57 +6,61 @@
     <title>Makeshift Shop</title>
     <meta name="description" content="First attempt at making a shop webpage."/>
     <link rel="stylesheet" href="./index.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
-      <h1 class="text-center" id="page-title" ariaLabel="webpage-title">Makeshift Shop</h1>
-      <button id="cart-btn"><i class="fa-solid fa-cart-shopping"></i></button>
-      <nav id="nav-board">
-        <ul>
-          <li id="homepage"><a href="#homepage">HOME</a></li>
-          <li id="shop"><a href="#shop">SHOP</a></li>
-          <li id="contact"><a href="#contact">CONTACT</a></li>
-          <li id="about"><a href="#about">ABOUT</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <div id="cart-section" class="hide">
-        <p id="cart-title">Your Shopping Cart</p><button id="clear-cart-btn">Clear Cart</button>
-        <div id="products-container"></div>
-        <div id="totals-container">
-          <p>Total Items: <span id="total-number-of-items"></span></p>
-          <p>Subtotal: <span id="subtotal"></span></p>
-          <p>Tax: <span id="tax"></span></p>
-          <p>Total: <span id="total"></span></p>
-        </div>
-        <!--Clear Cart Modal Section-->
-        <dialog id="clear-cart">
-          <h2 id="clear-prompt" class="text-center">Are you sure you want to clear all items in the cart?</h2>
-          <button id="clear-btn">Yes</button>
-          <button id="cancel-btn">No</button>
-        </dialog>
-      </div>
-      <div id="shop-section">
-        <h1 class="text-center large-text">What do you want to buy?</h1>
-        <div id="card-section"></div>
-        <!--Purchase Prompt Modal Section-->
-        <dialog id="number-to-buy">
-          <h2 id="buy-prompt" class="text-center">How many do you want to buy?</h2>
-          <input type="number" id="number-of-items" min="0"/>
-          <button id="buy">BUY!</button>
-          <button id="cancel-purchase">CANCEL!</button>
-        </dialog>
-      </div>
-    </main>
-    <footer>
-      <a class="text-center">CONTACT US</a>
-      <address class="text-center">
-        Phone Number: +1800CHECKUP<br/>
-        1900 Brass Ave.<br/>
-        Nettle, Lux<br/>
-      </address>
-    </footer>
-    <script src="./index.js"></script>
+  <h1 class="text-center" id="page-title" ariaLabel="webpage-title">Makeshift Shop</h1>
+  <button id="cart-btn"><i class="fa-solid fa-cart-shopping"></i></button>
+  <nav id="nav-board">
+    <ul>
+      <li id="homepage"><a href="#homepage">HOME</a></li>
+      <li id="shop"><a href="#shop">SHOP</a></li>
+      <li id="contact"><a href="#contact">CONTACT</a></li>
+      <li id="about"><a href="#about">ABOUT</a></li>
+    </ul>
+  </nav>
+</header>
+<main>
+  <div id="cart-section" class="hide">
+    <p id="cart-title">Your Shopping Cart</p><button id="clear-cart-btn">Clear Cart</button>
+    <div id="products-container"></div>
+    <div id="totals-container">
+      <p>Total Items: <span id="total-number-of-items"></span></p>
+      <p>Subtotal: <span id="subtotal"></span></p>
+      <p>Tax: <span id="tax"></span></p>
+      <p>Total: <span id="total"></span></p>
+    </div>
+    <!--Clear Cart Modal Section-->
+    <dialog id="clear-cart">
+      <h2 id="clear-prompt" class="text-center">Are you sure you want to clear all items in the cart?</h2>
+      <button id="clear-btn">Yes</button>
+      <button id="cancel-btn">No</button>
+    </dialog>
+  </div>
+  <div id="shop-section">
+    <h1 class="text-center large-text">What do you want to buy?</h1>
+    <div id="card-section"></div>
+    <!--Purchase Prompt Modal Section-->
+    <dialog id="number-to-buy">
+      <h2 id="buy-prompt" class="text-center">How many do you want to buy?</h2>
+      <input type="number" id="number-of-items" min="0"/>
+      <button id="buy">BUY!</button>
+      <button id="cancel-purchase">CANCEL!</button>
+    </dialog>
+  </div>
+</main>
+<footer>
+  <a class="text-center">CONTACT US</a>
+  <address class="text-center">
+    Phone Number: +1800CHECKUP<br/>
+    1900 Brass Ave.<br/>
+    Nettle, Lux<br/>
+  </address>
+</footer>
+    <script src="index.js"></script>
   </body>
 </html>
